--- a/themes/default/templates/partners/address_edit.html
+++ b/themes/default/templates/partners/address_edit.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load breadcrumbs %}
+{% load details %}
 
 {% block meta_title %}{% if object.pk %}{% trans 'Edit address' %}{% else %}{% trans 'Add address' %}{% endif %}{% endblock %}
 
@@ -38,51 +39,7 @@
 {% block main %}
 <form method="post" action=".">
     {% csrf_token %}
-    <table class="properties">
-        <tr>
-            <th>{% trans "Type" %}:</th>
-            <td colspan="3">
-                {{ form.type.errors }}
-                {{ form.type }}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "Street" %}:</th>
-            <td>
-                {{ form.street.errors }}
-                {{ form.street }}
-            </td>
-            <th>{% trans "Number" %}:</th>
-            <td>
-                {{ form.number.errors }}
-                {{ form.number }}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "City" %}:</th>
-            <td>
-                {{ form.city.errors }}
-                {{ form.city }}
-            </td>
-            <th>{% trans "Zip" %}:</th>
-            <td>
-                {{ form.zip.errors }}
-                {{ form.zip }}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "State/Province" %}:</th>
-            <td>
-                {{ form.state.errors }}
-                {{ form.state }}
-            </td>
-            <th>{% trans "Country" %}:</th>
-            <td>
-                {{ form.country.errors }}
-                {{ form.country }}
-            </td>
-        </tr>
-    </table>
+    {% property_table form "['type', ['street', 'number'], ['city', 'zip'], ['state', 'country']]" %}
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
