--- a/themes/default/templates/partners/contact_edit.html
+++ b/themes/default/templates/partners/contact_edit.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load breadcrumbs %}
+{% load details %}
 
 {% block meta_title %}
 {% if object.pk %}{% trans 'Edit contact' %}{% else %}{% trans 'Add contact' %}{% endif %}
@@ -37,46 +38,7 @@
 <form method="post" action="{% url contact_add %}">
 {% endif %}
     {% csrf_token %}
-    <table class="properties">
-        <tr>
-            <th>{% trans 'Firstname' %}</th>
-            <td>
-                {{ form.firstname.errors }}
-                {{ form.firstname }}
-            </td>
-            <th>{% trans 'Lastname' %}</th>
-            <td>
-                {{ form.lastname.errors }}
-                {{ form.lastname }}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "URL" %}</th>
-            <td>
-                {{ form.url.errors }}
-                {{ form.url }}
-            </td>
-            <th>{% trans "Email" %}</th>
-            <td>
-                {{ form.email.errors }}
-                {{ form.email }}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "Tags" %}</th>
-            <td colspan="3">
-                {{ form.tags.errors }}
-                {{ form.tags }}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "Categories" %}:</th>
-            <td colspan="3">
-                {{ form.categories.errors }}
-                {{ form.categories }}
-            </td>
-        </tr>
-    </table>
+    {% property_table form "[['firstname', 'lastname'], ['url', 'email'], 'tags', 'categories']" %}
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
