Improved form style and layout.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@482 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -115,6 +115,13 @@ form .submit {
     margin-right: 10px;
 }
 
+form .help_text {
+    display: block;
+    color: #c0c0c0;
+    font-style: italic;
+    margin-top: -10px;
+}
+
 form .required input, form .required textarea, form .required select {
     background-color: #fffecc;
     border: 1px solid #ffda88;
