All "*_detail/edit" templates of "todo" app are now using the new "property_table" templatetag.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@486 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/todo/task_edit.html
+++ b/themes/default/templates/todo/task_edit.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load breadcrumbs %}
+{% load details %}
 
 {% block meta_title %}
 {% if object.pk %}{% trans 'Edit task' %}{% else %}{% trans 'Add task' %}{% endif %}
@@ -36,7 +37,7 @@
 <form method="post" action="{% url task_add %}">
 {% endif %}
     {% csrf_token %}
-    {{ form.as_p }}
+    {% property_table form "['title', ['start', 'end'], 'description', 'categories', 'tags']" %}
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
