--- a/themes/default/templates/todo/task_detail.html
+++ b/themes/default/templates/todo/task_detail.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-{% load markup %}
 {% load breadcrumbs %}
+{% load details %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -45,53 +45,6 @@
 </div>
 {% include 'elements/navigator.html' %}
 <div class="details">
-    <table class="properties">
-        <tr>
-            <th>{% trans "Status" %}:</th>
-            <td colspan="3">
-                {% if object.closed %}
-                {% trans "Closed" %}{% if object.expired %} <span class="delay">({{ object.end|timesince }} {% trans "overdue" %})</span>{% endif %}
-                {% else %}
-                {% if object.expired %}
-                {% trans "Expired" %}{% if object.expired %} <span class="delay">({{ object.end|timesince }} {% trans "overdue" %})</span>{% endif %}
-                {% else %}
-                {% trans "Open" %}
-                {% endif %}
-                {% endif %}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "Created on" %}:</th>
-            <td>{% if object.created %}{{ object.created }}{% else %}<span class="disabled">{% trans "empty" %}</span>{% endif %}</td>
-            <th>{% trans "Closed on" %}:</th>
-            <td>{% if object.closed %}{{ object.closed }}{% else %}<span class="disabled">{% trans "empty" %}</span>{% endif %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Start date" %}:</th>
-            <td>{% if object.start %}{{ object.start }}{% else %}<span class="disabled">{% trans "empty" %}</span>{% endif %}</td>
-            <th>{% trans "End date" %}:</th>
-            <td>{% if object.end %}{{ object.end }}{% else %}<span class="disabled">{% trans "empty" %}</span>{% endif %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Tags" %}:</th>
-            <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Categories" %}:</th>
-            <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Description" %}:</th>
-            <td colspan="3">
-                <div class="entry">
-                    {% if object.description %}
-                    {{ object.description|safe }}
-                    {% else %}
-                    <span class="disabled">{% trans "empty" %}</span>
-                    {% endif %}
-                </div>
-            </td>
-        </tr>
-    </table>
+    {% property_table object "[['created', 'closed'], ['start', 'end'], 'description', 'categories', 'tags']" %}
 </div>
 {% endblock %}
