The "registration" app is now using the new "property_table" templatetag.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@488 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/registration/register.html
+++ b/themes/default/templates/registration/register.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load breadcrumbs %}
+{% load details %}
 
 {% block meta_title %}{% trans 'Register' %}{% endblock %}
 
@@ -20,7 +21,7 @@
 {% block main %}
 <form method="post" action="{% url user_register %}">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% property_table form "['username', 'email', ['password1', 'password2'], ['first_name', 'last_name'], 'tos', 'pp']" %}
     <span class="submit"><input type="submit" value="{% trans 'Sign up' %}" /></span>
 </form>
 {% endblock %}
