Removed generation of "table" tag from "property_table", so it's now possible to merge different models and forms in the same table very easily.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@493 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/events/event_detail.html
+++ b/themes/default/templates/events/event_detail.html
@@ -63,7 +63,9 @@
     <div class="section">
         {% block section %}
         <div class="details">
-            {% property_table object "[['author', 'created'], ['start', 'end'], ['location', 'status'], 'description', 'attendees', 'categories', 'tags']" %}
+            <table class="properties">
+                {% property_table object "[['author', 'created'], ['start', 'end'], ['location', 'status'], 'description', 'attendees', 'categories', 'tags']" %}
+            </table>
             {% include "elements/comments.html" %}
         </div>
         {% endblock %}
