--- a/themes/default/templates/notifications/notification_detail.html
+++ b/themes/default/templates/notifications/notification_detail.html
@@ -34,6 +34,8 @@
 </div>
 {% include 'elements/navigator.html' %}
 <div class="details">
-    {% property_table object "[['created', 'read'], 'description']" %}
+    <table class="properties">
+        {% property_table object "[['created', 'read'], 'description']" %}
+    </table>
 </div>
 {% endblock %}
