--- a/themes/default/templates/menus/bookmark_edit.html
+++ b/themes/default/templates/menus/bookmark_edit.html
@@ -39,7 +39,9 @@
 <form method="post" action="{% url bookmark_add object_user.username %}">
 {% endif %}
     {% csrf_token %}
-    {% property_table form "['title', 'url', 'description']" %}
+    <table class="properties">
+        {% property_table form "['title', 'url', 'description']" %}
+    </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
