--- a/themes/default/templates/partners/address_edit.html
+++ b/themes/default/templates/partners/address_edit.html
@@ -39,7 +39,9 @@
 {% block main %}
 <form method="post" action=".">
     {% csrf_token %}
-    {% property_table form "['type', ['street', 'number'], ['city', 'zip'], ['state', 'country']]" %}
+    <table class="properties">
+        {% property_table form "['type', ['street', 'number'], ['city', 'zip'], ['state', 'country']]" %}
+    </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
