--- a/themes/default/templates/projects/milestone_edit.html
+++ b/themes/default/templates/projects/milestone_edit.html
@@ -39,7 +39,9 @@
 <form method="post" action="{% url milestone_add object.project.slug %}">
 {% endif %}
     {% csrf_token %}
-    {% property_table form "['title', 'description', 'manager', 'deadline', 'categories', 'tags', 'allow_comments']" %}
+    <table class="properties">
+        {% property_table form "['title', 'description', 'manager', 'deadline', 'categories', 'tags', 'allow_comments']" %}
+    </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
