--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -57,7 +57,9 @@
     <div class="section">
         {% block section %}
         <div class="details">
-            {% property_table object "['manager', ['author', 'created'], ['status', 'closed'], 'description', 'categories', 'tags']" %}
+            <table class="properties">
+                {% property_table object "['manager', ['author', 'created'], ['status', 'closed'], 'description', 'categories', 'tags']" %}
+            </table>
             {% region object.dashboard %}
             {% include "elements/comments.html" %}
         </div>
