--- a/themes/default/templates/projects/project_edit.html
+++ b/themes/default/templates/projects/project_edit.html
@@ -37,7 +37,9 @@
 <form method="post" action="{% url project_add %}">
 {% endif %}
     {% csrf_token %}
-    {% property_table form "['title', 'description', 'manager', 'status', 'categories', 'tags', 'allow_comments']" %}
+    <table class="properties">
+        {% property_table form "['title', 'description', 'manager', 'status', 'categories', 'tags', 'allow_comments']" %}
+    </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
