--- a/themes/default/templates/projects/ticket_edit.html
+++ b/themes/default/templates/projects/ticket_edit.html
@@ -39,7 +39,9 @@
 <form method="post" action=".">
 {% endif %}
     {% csrf_token %}
-    {% property_table form "['title', ['milestone', 'assignee'],  ['type', 'urgency'], 'description', 'status', 'categories', 'tags']" %}
+    <table class="properties">
+        {% property_table form "['title', ['milestone', 'assignee'],  ['type', 'urgency'], 'description', 'status', 'categories', 'tags']" %}
+    </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
